# dreifus

./: .gitignore  README.md  pyproject.toml
src/dreifus/: camera.py  camera_bundle.py  graphics.py  image.py  pyvista.py  render.py  trajectory.py
src/dreifus/matrix/: __init__.py  intrinsics_numpy.py  intrinsics_torch.py  pose_base.py  pose_numpy.py  pose_torch.py  transform_numpy.py
src/dreifus/util/: colormap.py  mesh.py  typing.py  visualizer.py
src/dreifus/vector/: __init__.py  vector_base.py  vector_numpy.py  vector_torch.py
test/: test_camera.py  test_camera_bundle.py  test_graphics.py  test_image.py  test_intrinsics.py  test_pose.py  test_pyvista.py  test_vector.py
